# Triad-ProLang

./: Build.sh  BuildQuickStart.sh  ExampleSyntax.triad  README.md  Release_Notes.md  Run.sh  SyntaxSheet.md  triad_lexer.hpp
Docs/: License.md  README.md  SyntaxSheet.md  TriadCompilerToolchainStarter.md
triad-full-ecosystem-ultra/triad-everything/triad-pro/src/: triad_bytecode.hpp
triad-full-ecosystem-ultra/triad-everything/triad-vscode/: package.json
triad-pro/: 1cmakelist.txt  CMakeLists.txt  compiler.cpp  triad_min.cpp
triad-pro-max/triad-everything/: triad.ebnf
triad-pro-max/triad-everything/triad-pro/src/: triad_lexer.hpp  triadc.cpp
triad-pro-max/triad-everything/triad-vscode/: triad.tmLanguage.json
triad-pro-overdrive-plus/triad-everything/triad-pro/src/: triad_vm.cpp
triad-pro-overdrive-plusplus/triad-everything/triad-pro/: CMakeLists.txt
triad-pro-overdrive-plusplus/triad-everything/triad-pro/src/: triad_ast.hpp
triad-pro-overdrive-ultra/triad-everything/triad-pro/src/: triad_parser.cpp
triad-pro-overdrive-ultra/triad-everything/triad-vscode/: README.md
triad-pro-overdrive-ultraplus/triad-everything/triad-pro/samples/: hello.triad
triad-pro/src/: InlineConstchar.cpp  chunk.h  triad_ast.hpp  triad_bytecode.hpp  triad_lexer.hpp  triad_parser.cpp  triad_vm.cpp  triadc.cpp
vscode-triad-autocomplete/: BuildAndRunCmake.sh  CompilerQuickstart.sh  extension.ts  package.json
vscode-triad-autocomplete/config/: package.json  triad.tmLanguage.json  tsconfig.json
vscode-triad-autocomplete/snippets/: triad.json
